# node/src/config/swagger.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
   description: API documentation
 servers:
-  - url: http://localhost:3000
+  - url: http://localhost:3000/api/v1
 tags:
   - name: Users
     description: User operations
@@ -22,7 +22,7 @@ components:
       scheme: bearer
       bearerFormat: JWT
 paths:
-  /api/v1/auth/signup:
+  /auth/signup:
     post:
       summary: 회원가입
       tags:
@@ -80,7 +80,7 @@ paths:
                 properties:
                   message:
                     type: string
-  /api/v1/auth/login:
+  /auth/login:
     post:
       summary: 로그인
       tags:
@@ -124,7 +124,7 @@ paths:
                 properties:
                   message:
                     type: string
-  /api/v1/auth/logout:
+  /auth/logout:
     post:
       summary: 로그아웃
       tags:
@@ -150,7 +150,7 @@ paths:
                 properties:
                   message:
                     type: string
-  /api/v1/auth/token:
+  /auth/token:
     post:
       summary: 토큰 갱신
       tags:
@@ -198,7 +198,7 @@ paths:
                 properties:
                   message:
                     type: string
-  /api/v1/protected/hello:
+  /protected/hello:
     get:
       summary: Protected hello endpoint
       description: >-
@@ -218,7 +218,7 @@ paths:
                 properties:
                   message:
                     type: string
-  /api/v1/protected/acl_hello:
+  /protected/acl_hello:
     get:
       summary: Protected hello endpoint, with ACL -
       description: >-
